<resources>
    <string name="app_name">Zoudiy</string>
    <string name="login_with">Login with</string>
    <string name="or">or</string>
    <string name="terms_conditions">By Clicking Continue, you are accepting our Terms and Condition </string>
    <string name="privacy_policy">privacy policy</string>
    <string name="termsconditions"><![CDATA[Terms & Conditions]]></string>

    <!--    String Resources for Number Activity-->
    <string name="phone_number_label">Mobile No</string>
    <string name="phone_number_prefix">+91</string>
    <string name="phone__number_button">Login</string>

    <!--    String Resources for OTP Activity-->
    <string name="otp_label">OTP</string>
    <string name="verify_otp_button_label">Verify</string>
    <string name="resend_otp_button_label">Resend</string>

    <!--    String Resources for profile acitvity-->
    <string name="logout_button_label">Logout</string>


    <!--    Common String-->
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="update">Update</string>

    <string name="facebook_app_id">110337933740691</string>
    <string name="fb_login_protocol_scheme">fb110337933740691</string>
    <string name="TC">by</string>
    <string name="google">GOOgle</string>
    <string name="login">Login</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_app">AppActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_trip">Manage Trip</string>
    <string name="menu_vehicle">Manage Vehicle</string>

    <string name="home_second">Home Second</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="button_add_vehicle_addVehicleFragment">Add Vehicle</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="select_region">Select Regions</string>
    <string name="select_time">Select Time</string>
    <string name="weekly_schedule">Weekly Schedule</string>
    <string name="start_time">Start Time</string>
    <string name="fill_details">Please provide the following details</string>

</resources>
