<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.zoudiy.Activities.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.zoudiy.Activities.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.zoudiy.Activities.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.zoudiy.Activities.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_trip"
        android:name="com.example.zoudiy.Activities.trip.ManageTrip"
        android:label="ManageTrip">
        <action
            android:id="@+id/action_nav_trip_to_addTrip"
            app:destination="@id/addTrip" />
        <action
            android:id="@+id/action_nav_trip_to_tripDetails"
            app:destination="@id/tripDetails" />
    </fragment>
    <fragment
        android:id="@+id/addTrip"
        android:name="com.example.zoudiy.Activities.trip.AddTrip"
        android:label="AddTrip">
        <action
            android:id="@+id/action_addTrip_to_nav_trip"
            app:destination="@id/nav_trip"
            app:popUpToInclusive="false" />
    </fragment>
    <fragment
        android:id="@+id/manageVehicle"
        android:name="com.example.zoudiy.Activities.vehicle.ManageVehicle"
        android:label="ManageVehicle">
        <action
            android:id="@+id/action_manageVehicle_to_addVehicle"
            app:destination="@id/addVehicle" />
    </fragment>
    <fragment
        android:id="@+id/addVehicle"
        android:name="com.example.zoudiy.Activities.vehicle.AddVehicle"
        android:label="AddVehicle">
        <action
            android:id="@+id/action_addVehicle_to_manageVehicle"
            app:destination="@id/manageVehicle" />
    </fragment>
    <fragment
        android:id="@+id/manageRequest"
        android:name="com.example.zoudiy.Activities.request.ManageRequest"
        android:label="ManageRequest" />
    <fragment
        android:id="@+id/tripDetails"
        android:name="com.example.zoudiy.Activities.TripDetails"
        android:label="TripDetails" />
</navigation>